--- a/public/styles.css
+++ b/public/styles.css
@@ -41,11 +41,25 @@ h1 {
 }
 
 .headliner-one {
-  padding-left: 368px;
+  padding-left: 260px;
 }
 
 .headliner-two {
-  padding-left: 690px;
+  padding-left: 590px;
+}
+
+.opener-one {
+  /* row 7, col 3 */
+  position: absolute;
+  top: 722px;
+  left: 304px;
+}
+
+.opener-two {
+  /* row 8, col 5 */
+  position: absolute;
+  top: 798px;
+  left: 500px;
 }
 
 h2 {
