--- a/public/styles.css
+++ b/public/styles.css
@@ -62,6 +62,22 @@ h1 {
   left: 500px;
 }
 
+.info-location {
+ /* row 4, col 5*/
+ position: absolute;
+ top: 436px;
+ left: 498px;
+ min-width: 162px;
+}
+
+.info-date {
+  /* row 5, col 7 */
+  position: absolute;
+  top: 514px;
+  left: 694px;
+  min-width: 162px;
+}
+
 h2 {
   font-size: 24px;
   margin: 0;
@@ -113,4 +129,18 @@ p {
 
 .blue {
   background-color: var(--dark-blue);
+}
+
+.poster {
+  display: inline-block;
+  clip-path: inset(161.5px 192px 161.5px 192px);
+  /* transform: rotate(-45deg); */
+}
+
+body {
+  transform: translateY(-250px) translateX(130px) rotate(-45deg);
+}
+
+html {
+  overflow: hidden;
 }
